--- a/code/chap08.ipynb
+++ b/code/chap08.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
        "4 2015-12-02  107.00  107.92  105.79  106.07  24429063"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
        "895 2012-05-17      -      -      -  38.00          0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
        "<IPython.lib.display.Audio object>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +518,7 @@
        "-0.9001814882032255"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -572,6 +572,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all(rolled==padded)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -580,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +634,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.091, 0.091, 0.091, 0.091, 0.091, 0.091, 0.091, 0.091, 0.091,\n",
+       "       0.091, 0.091])"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "window"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -673,7 +714,7 @@
        "<IPython.lib.display.Audio object>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -693,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -728,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -807,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -824,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -843,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -874,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -892,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -911,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -928,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -960,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1004,13 +1045,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2de32cb913ca40c7a40f75ff1a07639d",
+       "model_id": "7bcc5399e2934e9ab1f6c62f5376db6a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1046,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1055,7 +1096,7 @@
        "(896, 867)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1077,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1108,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1141,7 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1160,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1191,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1200,7 +1241,7 @@
        "4.2831562455566367e-14"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1219,7 +1260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1235,7 +1276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1244,7 +1285,7 @@
        "4.263256414560601e-14"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1263,7 +1304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1282,7 +1323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1291,7 +1332,7 @@
        "867"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1303,7 +1344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -1312,7 +1353,7 @@
        "4.2831562455566367e-14"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1335,7 +1376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1345,7 +1386,7 @@
        "       1299686.728, 1305804.721])"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1364,7 +1405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1387,7 +1428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -1397,7 +1438,7 @@
        "       1293716.583+0.j, 1299686.728-0.j, 1305804.721+0.j])"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1416,7 +1457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -1425,7 +1466,7 @@
        "(896, 896)"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1459,7 +1500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1468,7 +1509,7 @@
        "1.3969838619232178e-09"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
